--- a/src/components/dashboard/Posts/Post/CommentsSection/Comments/Comments.css
+++ b/src/components/dashboard/Posts/Post/CommentsSection/Comments/Comments.css
@@ -1,7 +1,7 @@
 .all-comments-wrapper {
     /* width: 300px; */
     width: 100%;
-    min-height: 100px;
+    /* min-height: 100px; */
     /* background-color: red; */
     display: block;
     margin-bottom: 10px;
